<resources>
    <string name="app_name">group-project-group-duolikun-daniya</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="set_up_a_password">Set up a password</string>
    <string name="sign_up">Sign up</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_sign_up">Click to sign up</string>
    <string name="log_out">Log out</string>
    <string name="email_header">Email:</string>
    <string name="create_a_group">Create a Group:</string>
    <string name="create_a_new_group_here">Create a new group here</string>
    <string name="or_join_an_existing_group">Or Join an existing Group:</string>
    <string name="input_6_digits_group_code_to_join">Input 6 digits group code to join</string>
    <string name="next">Next</string>
    <string name="please_create_or_join_a_group_to_start_using_the_app">Please create or join a group to start using the app</string>
    <string name="textview">TextView</string>
    <string name="money_split">Money Split</string>
    <string name="home">Home</string>
    <string name="expense">Expense</string>
    <string name="members">Members</string>
    <string name="transactions">Transactions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_1">Member 1</string>
    <string name="add_members_to_your_group">Add members to your group</string>
    <string name="member_2">Member 2</string>
    <string name="cancel">Cancel</string>
    <string name="member_hint">Member</string>
    <string name="expenses">Expenses</string>
    <string name="member_name">Member name</string>
    <string name="save">Save</string>
    <string name="add_an_expense_to_your_group">Add an expense to your group</string>
</resources>