<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".CreateOrJoinGroupActivity">

    <!-- Prompt TextView -->
    <TextView
        android:id="@+id/prompt_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="start"
        android:text="@string/please_create_or_join_a_group_to_start_using_the_app"
        android:textSize="25sp" />

    <!-- Create A Group TextView -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/create_a_group"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Create A Group EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_a_new_group_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Space to separate the two TextViews -->
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    <!-- Or Join an existing Group TextView -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/or_join_an_existing_group"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Password EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/join_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_6_digits_group_code_to_join" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!-- Next Button -->
    <Button
        android:id="@+id/next_create_or_join_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/next"
        android:textSize="17sp" />

</LinearLayout>